2009-02-21  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.c-torture/execute/pr39228.x: New.

2009-02-20  Steve Ellcey  <sje@cup.hp.com>

	PR target/38056
	* gcc.target/ia64/sibcall-opt-1.c: New test.
	* gcc.target/ia64/sibcall-opt-2.c: New test.

2009-02-20  Jason Merrill  <jason@redhat.com>

	PR c++/39225
	* g++.dg/parse/dtor15.C: New test.

2009-02-19  Uros Bizjak  <ubizjak@gmail.com>

	PR target/39228
	* gcc.c-torture/execute/pr39228.c: New test.

2009-02-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38852
	PR fortran/39006
	Backport from mainline:
	* gfortran.dg/bound_6.f90: New test.

2009-02-17  Jason Merrill  <jason@redhat.com>

	PR c++/38950
	* g++.dg/template/array20.C: New test.

2009-02-17  Joseph Myers  <joseph@codesourcery.com>

	PR c/35446
	* gcc.dg/noncompile/init-5.c: New test.
	* gcc.dg/init-bad-4.c: Adjust expected errors.

2009-02-15  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/struct/w_prof_single_str_global.c: Mask return value.

	Backport from mainline:
	2009-01-12  Mark Mitchell  <mark@codesourcery.com>

	* gcc.dg/struct/wo_prof_single_str_global.c: Mask return value.
	* gcc.dg/struct/wo_prof_single_str_local.c: Mask return value.
	* gcc.dg/struct/wo_prof_single_str_pointer.c: Mask return value.

2009-02-13  Jason Merrill  <jason@redhat.com>

	PR c++/39070
	* g++.dg/cpp0x/decltype16.C: New.

2009-02-13  Joseph Myers  <joseph@codesourcery.com>

	PR c/35444
	* gcc.dg/noncompile/pr35444-1.c, gcc.dg/noncompile/pr35444-2.c:
	New tests.

2009-02-10  Steve Ellcey  <sje@cup.hp.com>

	PR c/39084
	* gcc.dg/pr39084.c: New test.

2009-02-09  Janis Johnson  <janis187@us.ibm.com>

	PR c/39035
	* gcc.dg/dfp/pr39035.c: New test.

2009-02-08  Joseph Myers  <joseph@codesourcery.com>

	PR c/35434
	* gcc.dg/attr-alias-4.c: New test.

2009-02-08  Joseph Myers  <joseph@codesourcery.com>

	PR c/36432
	* gcc.dg/c90-flex-array-2.c, gcc.dg/c99-flex-array-6.c: New tests.

2009-02-05  Joseph Myers  <joseph@codesourcery.com>

	PR c/35435
	* gcc.dg/tls/diag-6.c: New test.